= SeqAn Changelog =

Add a new list item '''AT THE TOP''' for each change (excluding trivial things like changes to whitespace and comments).
Link to changsets with `[CHANGESET-NUMBER]` and tickets with `#TICKET-NUMBER` whenever possible.
You can use Trac wiki syntax.

== Trunk ==

 * Properly documenting `lowerBoundAlignedReads()` and `upperBoundAlignedReads()`.
 * Fixing documentation about include for ''misc/misc_cmdparser.h'', was ''seqan/misc.h'', corrected to ''seqan/misc/misc_cmdparser.h''.
 * Assertion in semiglobal SWIFT finder that hits begin <= end.
 * Initializing state.errors in Myers Ukkonen banded pattern initialization.

== Release 1.3 ==