@@ -6,6 +6,7 @@ You can use Trac wiki syntax.
 
 == Trunk ==
 
+ * Fixing `lowerBoundAlignedReads()` and `lowerBoundAlignedReads()` when searching by begin and end position.
  * Properly documenting `lowerBoundAlignedReads()` and `upperBoundAlignedReads()`.
  * Fixing documentation about include for ''misc/misc_cmdparser.h'', was ''seqan/misc.h'', corrected to ''seqan/misc/misc_cmdparser.h''.
  * Assertion in semiglobal SWIFT finder that hits begin <= end.
